--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,3 +14,17 @@ header {
   background-color: #7998c9;
   color: #fff;
 }
+.scene {
+  height: calc(100vh - 60px);
+  width: 100vw;
+  position: relative;
+}
+body {
+  margin-top: 0 !important;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+body video {
+  top: 60px !important;
+  margin-top: 0 !important;
+}
