--- a/src/styles/header.styl
+++ b/src/styles/header.styl
@@ -13,6 +13,7 @@ header
   .marker-indicator
     padding-right 25px
     position relative
+
     &:after
       position absolute
       right 0
@@ -24,8 +25,11 @@ header
 
     &:not(.found):after
       background-color #E97778
-      box-shadow: 0 0 3px 3px lighten(#E97778, 5%)
+      box-shadow 0 0 3px 3px lighten(#E97778, 5%)
 
     &.found:after
       background-color #89C793
-      box-shadow: 0 0 3px 3px lignten(#89C793, 5%)
+      box-shadow 0 0 3px 3px lighten(#89C793, 5%)
+
+    &:first-of-type
+      margin-right 20px
